# 1d-spectral-optimal-transport

./: pyproject.toml
paper-experiments/SOT-2048-long/4utsx63v-101112/: train_config.yaml
paper-experiments/SOT-2048-long/any432ya-123/: train_config.yaml
paper-experiments/SOT-2048-long/bmc2htff-456/: train_config.yaml
paper-experiments/SOT-2048-long/c6m8cytv-42/: train_config.yaml
paper-experiments/SOT-2048-long/up2qw81d-789/: train_config.yaml
