[project]
name = "1d-spectral-optimal-transport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonargparse[signatures]==4.22.1",
    "librosa>=0.11.0",
    "lightning==1.9.3",
    "matplotlib>=3.10.3",
    "mir-eval>=0.8.2",
    "nnaudio>=0.3.3",
    "pytorch-lightning==1.9.3",
    "torchaudio>=2.7.0",
    "wandb>=0.19.11",
]
